--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Red+Hat+Display:400,700&display=swap");
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -5,6 +7,7 @@ html {
 }
 body {
   margin: 0;
+  background-color: #f9f9f9;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -200,7 +203,7 @@ html {
 }
 body {
   color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
+  font-family: "Red Hat Display", sans-serif;
   font-weight: normal;
   word-wrap: break-word;
   font-kerning: normal;
