--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Red+Hat+Display:400,700&display=swap");
-@import url("https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.7/css/uikit.css");
 
 html {
   font-family: sans-serif;
