--- a/src/components/Graphs/chart.css
+++ b/src/components/Graphs/chart.css
@@ -1,7 +1,7 @@
 .tooltip {
   color: white;
   position: absolute;
-  text-align: center;
+  text-align: left;
   padding: 0.1rem 0.5rem;
   font-size: 16px;
   font-weight: 500;
