--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -421,7 +421,7 @@ table {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  margin-bottom: 0 !important;
   font-size: 1rem;
   line-height: 1.45rem;
   border-collapse: collapse;
