--- a/src/components/Graphs/chart.css
+++ b/src/components/Graphs/chart.css
@@ -7,4 +7,7 @@
   font-weight: 500;
   background: rgba(0, 0, 0, .8);
   pointer-events: none;
+  left: 0;
+  top: 0;
+  transition: transform 0.1s;
 }
