--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -661,6 +661,7 @@ abbr[title] {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
   cursor: help;
   text-decoration: none;
+  font-size: 85%;
 }
 
 thead {
