fix border rendered over oneanother making it look darker

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -671,7 +671,7 @@ thead {
 td,
 th {
   text-align: left;
-  border-bottom: 1px solid hsla(0, 0%, 0%, 0.12);
+  border-bottom: 1px solid #e0e0e0;
   font-feature-settings: "tnum";
   -moz-font-feature-settings: "tnum";
   -ms-font-feature-settings: "tnum";
